--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -260,6 +260,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-push-notification')
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
