--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-push-notification": "^8.1.1",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
