--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,13 +17,13 @@
                     android:resource="@color/white"/>
         <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions" />
         <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" />
-        <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver">
-            <intent-filter>
+        <!-- <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver"> -->
+            <!-- <intent-filter> -->
                 <!-- <action android:name="android.intent.action.BOOT_COMPLETED" /> -->
                 <!-- <action android:name="android.intent.action.QUICKBOOT_POWERON" /> -->
                 <!-- <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/> -->
-            </intent-filter>
-        </receiver>
+            <!-- </intent-filter> -->
+        <!-- </receiver> -->
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
