--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
